Fixed overflow issue and greeting stripes.

--- a/frontend/src/components/home-page/Greeting.module.scss
+++ b/frontend/src/components/home-page/Greeting.module.scss
@@ -6,6 +6,7 @@
   color: #999;
   font-size: 18px;
   z-index: 10;
+  overflow: hidden;
 
   @include breakpoint-up($b480px) {
     font-size: 20px;
@@ -25,7 +26,7 @@
     background-color: #111;
     left: 0;
     top: 0;
-    background-image: url("/images/common/stripes.svg");
+    background-image: url("/images/common/stripes.webp");
     animation: scrollStripes linear infinite;
     animation-duration: 150s;
     z-index: -1;
